!!!! FIX !!!!
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "clustersight"
version = "0.0.1"
authors = [
  { name="John Boesen", email="jmboesen@college.harvard.edu" },
]
description = "A package to analyze and interpret categorical clustered data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"